tests/testcrate/tests/ui/update.stderr
error[E0308]: mismatched types
  --> $DIR/update.rs:49:56
   |
49 |     let _ = sql!(Table.filter(id == 1).update(field1 = 42, i32_field = value));
   |                                                        ^^
   |                                                        |
   |                                                        expected struct `std::string::String`, found integer
   |                                                        help: try using a conversion method: `42.to_string()`
   |
   = note: expected type `std::string::String`
              found type `{integer}`

error[E0609]: no field `value` on type `Table`
  --> $DIR/update.rs:55:30
   |
55 |     sql!(Table.get(1).update(value += " test"));
   |                              ^^^^^ unknown field
   |
   = note: available fields are: `id`, `field1`, `i32_field`

error: aborting due to 2 previous errors

Some errors occurred: E0308, E0609.
For more information about an error, try `rustc --explain E0308`.
